src/main/java/org/example/generated/CoolGrammarParser.java
// Generated from C:/Users/Vladyslav/Desktop/фото дз/3 курс/Компілятори/coolcompiler/src/main/resources\CoolGrammar.g4 by ANTLR 4.10.1
package org.example.generated;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CoolGrammarParser extends Parser {
    public static final int
            PLUS = 1, MINUS = 2, MUL = 3, DIV = 4, EQUALS = 5, LPAREN = 6, RPAREN = 7, LBRACE = 8,
            RBRACE = 9, COMMA = 10, DOT = 11, SEMICOLON = 12, COLON = 13, LESS = 14, LESSOREQUALS = 15,
            ASSIGN = 16, CASE_ARROW = 17, TILDE = 18, ATSYM = 19, NOT = 20, TRUE = 21, FALSE = 22,
            IF = 23, FI = 24, THEN = 25, ELSE = 26, CASE = 27, ESAC = 28, WHILE = 29, LOOP = 30, POOL = 31,
            CLASS = 32, IN = 33, INHERITS = 34, OF = 35, LET = 36, NEW = 37, ISVOID = 38, WS = 39,
            NUM = 40, STRING_VALUE = 41, COMMENT = 42, BOOL_CONST = 43, INT = 44, STRING = 45,
            OBJECT = 46, MAIN = 47, TYPE = 48, ID = 49, ERROR = 50;
    public static final int
            RULE_program = 0, RULE_value = 1, RULE_attribute_without_semicolon = 2,
            RULE_attribute = 3, RULE_assigment = 4, RULE_parameters = 5, RULE_method = 6,
            RULE_conditional = 7, RULE_loop = 8, RULE_block = 9, RULE_let = 10, RULE_case_option = 11,
            RULE_switch_case = 12, RULE_new = 13, RULE_isvoid = 14, RULE_ariphemitic_operation = 15,
            RULE_class = 16, RULE_expr = 17;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public CoolGrammarParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "program", "value", "attribute_without_semicolon", "attribute", "assigment",
                "parameters", "method", "conditional", "loop", "block", "let", "case_option",
                "switch_case", "new", "isvoid", "ariphemitic_operation", "class", "expr"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'+'", "'-'", "'*'", "'/'", "'='", "'('", "')'", "'{'", "'}'",
                "','", "'.'", "';'", "':'", "'<'", "'<='", "'<-'", "'=>'", "'~'", "'@'",
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                "'Int'", "'String'", "'Object'"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "PLUS", "MINUS", "MUL", "DIV", "EQUALS", "LPAREN", "RPAREN", "LBRACE",
                "RBRACE", "COMMA", "DOT", "SEMICOLON", "COLON", "LESS", "LESSOREQUALS",
                "ASSIGN", "CASE_ARROW", "TILDE", "ATSYM", "NOT", "TRUE", "FALSE", "IF",
                "FI", "THEN", "ELSE", "CASE", "ESAC", "WHILE", "LOOP", "POOL", "CLASS",
                "IN", "INHERITS", "OF", "LET", "NEW", "ISVOID", "WS", "NUM", "STRING_VALUE",
                "COMMENT", "BOOL_CONST", "INT", "STRING", "OBJECT", "MAIN", "TYPE", "ID",
                "ERROR"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "CoolGrammar.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(37);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(36);
                            class_();
                        }
                    }
                    setState(39);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == CLASS);
                {
                    setState(44);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == COMMENT) {
                        {
                            {
                                setState(41);
                                match(COMMENT);
                            }
                        }
                        setState(46);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ValueContext value() throws RecognitionException {
        ValueContext _localctx = new ValueContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_value);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(47);
                match(ID);
                setState(48);
                match(COLON);
                setState(49);
                match(TYPE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Attribute_without_semicolonContext attribute_without_semicolon() throws RecognitionException {
        Attribute_without_semicolonContext _localctx = new Attribute_without_semicolonContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_attribute_without_semicolon);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(51);
                value();
                setState(54);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == ASSIGN) {
                    {
                        setState(52);
                        match(ASSIGN);
                        setState(53);
                        expr(0);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AttributeContext attribute() throws RecognitionException {
        AttributeContext _localctx = new AttributeContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_attribute);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(56);
                attribute_without_semicolon();
                setState(57);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AssigmentContext assigment() throws RecognitionException {
        AssigmentContext _localctx = new AssigmentContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_assigment);
        try {
            setState(64);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case ID:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(59);
                    value();
                    setState(60);
                    match(ASSIGN);
                    setState(61);
                    expr(0);
                }
                break;
                case NEW:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(63);
                    new_();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ParametersContext parameters() throws RecognitionException {
        ParametersContext _localctx = new ParametersContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_parameters);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(66);
                attribute_without_semicolon();
                setState(71);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(67);
                            match(COMMA);
                            setState(68);
                            attribute_without_semicolon();
                        }
                    }
                    setState(73);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final MethodContext method() throws RecognitionException {
        MethodContext _localctx = new MethodContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_method);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(74);
                match(ID);
                setState(75);
                match(LBRACE);
                setState(77);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == ID) {
                    {
                        setState(76);
                        parameters();
                    }
                }

                setState(79);
                match(RBRACE);
                setState(80);
                match(COLON);
                setState(81);
                match(TYPE);
                setState(82);
                match(LPAREN);
                {
                    setState(86);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << LBRACE) | (1L << IF) | (1L << CASE) | (1L << WHILE) | (1L << LET) | (1L << NEW) | (1L << ISVOID) | (1L << NUM) | (1L << STRING_VALUE) | (1L << COMMENT) | (1L << BOOL_CONST) | (1L << ID))) != 0)) {
                        {
                            {
                                setState(83);
                                expr(0);
                            }
                        }
                        setState(88);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                }
                setState(89);
                match(RPAREN);
                setState(90);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ConditionalContext conditional() throws RecognitionException {
        ConditionalContext _localctx = new ConditionalContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_conditional);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(92);
                match(IF);
                setState(93);
                expr(0);
                setState(94);
                match(THEN);
                setState(95);
                expr(0);
                setState(96);
                match(ELSE);
                setState(97);
                expr(0);
                setState(98);
                match(FI);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final LoopContext loop() throws RecognitionException {
        LoopContext _localctx = new LoopContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_loop);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(100);
                match(WHILE);
                setState(101);
                expr(0);
                setState(102);
                match(LOOP);
                setState(103);
                expr(0);
                setState(104);
                match(POOL);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BlockContext block() throws RecognitionException {
        BlockContext _localctx = new BlockContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_block);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(106);
                match(LBRACE);
                {
                    setState(112);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << LBRACE) | (1L << IF) | (1L << CASE) | (1L << WHILE) | (1L << LET) | (1L << NEW) | (1L << ISVOID) | (1L << NUM) | (1L << STRING_VALUE) | (1L << COMMENT) | (1L << BOOL_CONST) | (1L << ID))) != 0)) {
                        {
                            {
                                setState(107);
                                expr(0);
                                setState(108);
                                match(SEMICOLON);
                            }
                        }
                        setState(114);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                }
                setState(115);
                match(RBRACE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final LetContext let() throws RecognitionException {
        LetContext _localctx = new LetContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_let);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(117);
                match(LET);
                setState(119);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(118);
                            parameters();
                        }
                    }
                    setState(121);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == ID);
                setState(123);
                match(IN);
                setState(124);
                expr(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Case_optionContext case_option() throws RecognitionException {
        Case_optionContext _localctx = new Case_optionContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_case_option);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(126);
                value();
                setState(127);
                match(CASE_ARROW);
                setState(128);
                expr(0);
                setState(129);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Switch_caseContext switch_case() throws RecognitionException {
        Switch_caseContext _localctx = new Switch_caseContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_switch_case);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(131);
                match(CASE);
                setState(132);
                expr(0);
                setState(133);
                match(OF);
                setState(135);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(134);
                            case_option();
                        }
                    }
                    setState(137);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == ID);
                setState(139);
                match(ESAC);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final NewContext new_() throws RecognitionException {
        NewContext _localctx = new NewContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_new);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(141);
                match(NEW);
                setState(142);
                match(TYPE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final IsvoidContext isvoid() throws RecognitionException {
        IsvoidContext _localctx = new IsvoidContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_isvoid);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(144);
                match(ISVOID);
                setState(145);
                expr(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Ariphemitic_operationContext ariphemitic_operation() throws RecognitionException {
        Ariphemitic_operationContext _localctx = new Ariphemitic_operationContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_ariphemitic_operation);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(147);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << MUL) | (1L << DIV) | (1L << EQUALS) | (1L << LESS) | (1L << LESSOREQUALS))) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ClassContext class_() throws RecognitionException {
        ClassContext _localctx = new ClassContext(_ctx, getState());
        enterRule(_localctx, 32, RULE_class);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(149);
                match(CLASS);
                setState(150);
                match(TYPE);
                setState(153);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == INHERITS) {
                    {
                        setState(151);
                        match(INHERITS);
                        setState(152);
                        match(TYPE);
                    }
                }

                setState(155);
                match(LBRACE);
                setState(159);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 11, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(156);
                                attribute();
                            }
                        }
                    }
                    setState(161);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 11, _ctx);
                }
                setState(165);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == ID) {
                    {
                        {
                            setState(162);
                            method();
                        }
                    }
                    setState(167);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(168);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExprContext expr() throws RecognitionException {
        return expr(0);
    }

    private ExprContext expr(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ExprContext _localctx = new ExprContext(_ctx, _parentState);
        ExprContext _prevctx = _localctx;
        int _startState = 34;
        enterRecursionRule(_localctx, 34, RULE_expr, _p);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(195);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 14, _ctx)) {
                    case 1: {
                        setState(171);
                        attribute();
                    }
                    break;
                    case 2: {
                        setState(172);
                        assigment();
                    }
                    break;
                    case 3: {
                        setState(173);
                        match(ID);
                        setState(174);
                        match(LBRACE);
                        setState(176);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if (_la == ID) {
                            {
                                setState(175);
                                parameters();
                            }
                        }

                        setState(178);
                        match(RBRACE);
                    }
                    break;
                    case 4: {
                        setState(179);
                        conditional();
                    }
                    break;
                    case 5: {
                        setState(180);
                        loop();
                    }
                    break;
                    case 6: {
                        setState(181);
                        block();
                    }
                    break;
                    case 7: {
                        setState(182);
                        let();
                    }
                    break;
                    case 8: {
                        setState(183);
                        switch_case();
                    }
                    break;
                    case 9: {
                        setState(184);
                        new_();
                    }
                    break;
                    case 10: {
                        setState(185);
                        isvoid();
                    }
                    break;
                    case 11: {
                        setState(186);
                        match(LPAREN);
                        setState(187);
                        expr(0);
                        setState(188);
                        match(RPAREN);
                    }
                    break;
                    case 12: {
                        setState(190);
                        match(ID);
                    }
                    break;
                    case 13: {
                        setState(191);
                        match(BOOL_CONST);
                    }
                    break;
                    case 14: {
                        setState(192);
                        match(STRING_VALUE);
                    }
                    break;
                    case 15: {
                        setState(193);
                        match(NUM);
                    }
                    break;
                    case 16: {
                        setState(194);
                        match(COMMENT);
                    }
                    break;
                }
                _ctx.stop = _input.LT(-1);
                setState(211);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 17, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(209);
                            _errHandler.sync(this);
                            switch (getInterpreter().adaptivePredict(_input, 16, _ctx)) {
                                case 1: {
                                    _localctx = new ExprContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(197);
                                    if (!(precpred(_ctx, 7)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 7)");
                                    setState(198);
                                    ariphemitic_operation();
                                    setState(199);
                                    expr(8);
                                }
                                break;
                                case 2: {
                                    _localctx = new ExprContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(201);
                                    if (!(precpred(_ctx, 16)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 16)");
                                    setState(202);
                                    match(DOT);
                                    setState(203);
                                    match(ID);
                                    setState(204);
                                    match(LBRACE);
                                    setState(206);
                                    _errHandler.sync(this);
                                    _la = _input.LA(1);
                                    if (_la == ID) {
                                        {
                                            setState(205);
                                            parameters();
                                        }
                                    }

                                    setState(208);
                                    match(RBRACE);
                                }
                                break;
                            }
                        }
                    }
                    setState(213);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 17, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
        switch (ruleIndex) {
            case 17:
                return expr_sempred((ExprContext) _localctx, predIndex);
        }
        return true;
    }

    private boolean expr_sempred(ExprContext _localctx, int predIndex) {
        switch (predIndex) {
            case 0:
                return precpred(_ctx, 7);
            case 1:
                return precpred(_ctx, 16);
        }
        return true;
    }

    public static class ProgramContext extends ParserRuleContext {
        public ProgramContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public List<ClassContext> class_() {
            return getRuleContexts(ClassContext.class);
        }

        public ClassContext class_(int i) {
            return getRuleContext(ClassContext.class, i);
        }

        public List<TerminalNode> COMMENT() {
            return getTokens(CoolGrammarParser.COMMENT);
        }

        public TerminalNode COMMENT(int i) {
            return getToken(CoolGrammarParser.COMMENT, i);
        }

        @Override
        public int getRuleIndex() {
            return RULE_program;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CoolGrammarListener) ((CoolGrammarListener) listener).enterProgram(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CoolGrammarListener) ((CoolGrammarListener) listener).exitProgram(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CoolGrammarVisitor)
                return ((CoolGrammarVisitor<? extends T>) visitor).visitProgram(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class ValueContext extends ParserRuleContext {
        public ValueContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode ID() {
            return getToken(CoolGrammarParser.ID, 0);
        }

        public TerminalNode COLON() {
            return getToken(CoolGrammarParser.COLON, 0);
        }

        public TerminalNode TYPE() {
            return getToken(CoolGrammarParser.TYPE, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_value;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CoolGrammarListener) ((CoolGrammarListener) listener).enterValue(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CoolGrammarListener) ((CoolGrammarListener) listener).exitValue(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CoolGrammarVisitor)
                return ((CoolGrammarVisitor<? extends T>) visitor).visitValue(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class Attribute_without_semicolonContext extends ParserRuleContext {
        public Attribute_without_semicolonContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public ValueContext value() {
            return getRuleContext(ValueContext.class, 0);
        }

        public TerminalNode ASSIGN() {
            return getToken(CoolGrammarParser.ASSIGN, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_attribute_without_semicolon;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CoolGrammarListener)
                ((CoolGrammarListener) listener).enterAttribute_without_semicolon(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CoolGrammarListener)
                ((CoolGrammarListener) listener).exitAttribute_without_semicolon(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CoolGrammarVisitor)
                return ((CoolGrammarVisitor<? extends T>) visitor).visitAttribute_without_semicolon(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class AttributeContext extends ParserRuleContext {
        public AttributeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public Attribute_without_semicolonContext attribute_without_semicolon() {
            return getRuleContext(Attribute_without_semicolonContext.class, 0);
        }

        public TerminalNode SEMICOLON() {
            return getToken(CoolGrammarParser.SEMICOLON, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_attribute;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CoolGrammarListener) ((CoolGrammarListener) listener).enterAttribute(this);
        }
